01-lab-setup/01-tier1-setup/resources/istio/gateways/k8s.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: k8s
  namespace: istio-gateway
  annotations:
    networking.istio.io/service-type: NodePort
spec:
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: k8s-lab-gateway-config
  gatewayClassName: istio
  listeners:
  - name: keycloak-tls-passthrough
    hostname: "keycloak.auth.k8s.local"
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            service-type: auth

  - name: lab-https-termination
    hostname: "*.lab.k8s.local"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: gateway-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            service-type: lab
